hphp/hack/test/typecheck/nullsafe_pipe_operator.php.exp
ERROR: File "nullsafe_pipe_operator.php", line 13, characters 25-26:
Invalid argument (Typing[4110])
  File "nullsafe_pipe_operator.php", line 7, characters 14-19:
  Expected `string`
  File "nullsafe_pipe_operator.php", line 3, characters 31-37:
  But got `?string`
ERROR: File "nullsafe_pipe_operator.php", line 20, characters 7-13:
Invalid argument (Typing[4110])
  File "nullsafe_pipe_operator.php", line 7, characters 14-19:
  Expected `string`
  File "nullsafe_pipe_operator.php", line 18, characters 13-38:
  But got `?string` (use of `|?>` operator)
